Issue #3: Move value text over to lower-right hand of cell, poking outside slightly - Improve visibility by not overlapping text with bright icons like Zonde - Recenter Frame Slots and Barrier Obtained since value text is moved

--- a/src/tracker.css
+++ b/src/tracker.css
@@ -113,7 +113,8 @@ g.hybrid text.value
 /* Non-hybrid palettes: Put the value at the bottom of the cell instead */
 g:not(.hybrid) > g text.value
 {
-    transform: translate(0,31px);
+    text-anchor: end;
+    transform: translate(21px,32px);
 }
 
 /* Display parameters for the key control display */
